# LLM_APP

./: .gitignore  pyproject.toml
src/llm_app/: app.py  chat_app_3_sidebar.py  config.py
src/llm_app/section2/: app.py  chat_app_2.py  chat_app_llm.py
src/llm_app/section3/: 3app.py  chat_app_3_sidebar_func.py  prac_lcle.py  prac_lcle_PromptTemplate.py  prac_lcle_batch.py  prac_lcle_configurableField.py  prac_lcle_streaming.py  prac_streamlit_clear.py
src/llm_app/section5/: app_5-1-add.py  app_5-1-long.py  app_5-1.py  app_5-2-add.py  dbg-5-2.py  dbg5-2-2.py  get_content.py  prac_lcel.py  prac_map.py  text_split.py
src/llm_app/section6/: app_6-1.py  app_6-2.py
src/llm_app/section7/: main.py
src/llm_app/section7/pages/: 1 Upload PDF(s).py  1 📄 Upload PDF(s).py  2 🧐 PDF QA.py
