[project]
name = "llm-app"
version = "0.1.0"
description = "勉強用 LLM アプリ"
authors = [
    {name = "Sakuma",email = "cao.kuanshen@gmail.com"}
]
readme = "README.md"

packages = [
  { include = "llm_app", from = "src" }
]

requires-python = "~3.13"
dependencies = [
    "langchain (==0.1.16)",
    "streamlit (==1.33.0)",
    "openai (==1.29.0)",
    "langchain-community (==0.0.36)",
    "langchain-core (==0.1.48)",
    "langchain-openai (==0.1.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llm-app = "llm_app.app:main"