[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = "勉強用 LLM アプリ"
authors = ["Sakuma <cao.kuanshen@gmail.com>"]
readme = "README.md"
packages = [
  { include = "llm_app", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.13"
langchain = ">=0.3.25"
streamlit = "*"
openai = "*"
langchain-community = "*"
langchain-core = "*"
langchain-openai = "*"
tiktoken = "*"
requests = "*"
beautifulsoup4 = "*"
"langchain-text-splitters" = "*"
"youtube-transcript-api" = ">=1.1.0"
pytube = "*"

[tool.poetry.scripts]
llm-app = "llm_app.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
